# simple-panel

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  simple_panel.geany
data/: Makefile.am  apps.spanel.gschema.xml  simple-panel.conf  spanel.conf  toggledesk.desktop
data/default/: simple-panel.conf
data/ui/: panel-pref-01.ui
devdocs/: panel-abstract-window.vala in rote blankon-panel src – BlankOn.html
src/: Application.vala  Makefile.am  PanelContainer.vala  PanelWindow.vala
src/Applets/: CustomButton.vala  LaunchBarApplet.vala  MenuApplet.vala  PagerApplet.vala  PanelApplet.vala  SystemClockApplet.vala  SystemTrayApplet.vala  TaskListApplet.vala
src/Applets/LaunchBar/: LaunchBarApplet.vala  LaunchBarItem.vala
src/Applets/TaskList/: TaskAppButton.vala  TaskButton.vala  TaskListApplet2.vala
src/Applets/systray/: na-tray-child.c
src/Common/: OptionsParser.vala
src/Panel/: PanelContainer.vala  PanelGroup.vala  PanelWindow.vala
src/Utils/: misc.c
src/Widgets/: CustomButton2.vala
src/systray/: na-marshal.c  na-tray.c
vapi/: config.vapi  misc.vapi  na-tray.vapi
vapi/menu-cache/: libmenu-cache.vapi.orig  menu_cache_test.vala  test.c  vapi-gen.sh.txt
